crates/formatter/tests/snapshots/snapshots__synapse__main__delta__56__nuke_empty_communities_from_db.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2019 Werner Sembach
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Groups/communities now get deleted when the last member leaves. This is a one time cleanup to remove old groups/communities that were already empty before that change was made.
delete from group_attestations_remote
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_attestations_renewals
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_invites
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_roles
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_room_categories
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_rooms
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_summary_roles
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_summary_room_categories
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_summary_rooms
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from group_summary_users
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from local_group_membership
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from local_group_updates
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
delete from groups
where
	group_id in (
		select group_id
		from groups
		where
			not exists (
				select group_id
				from group_users
				where group_id = groups.group_id
			)
	);
