crates/formatter/tests/snapshots/snapshots__synapse__main__delta__56__redaction_censor3_fix_update.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2019 The Matrix.org Foundation C.I.C.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- There was a bug where we may have updated censored redactions as bytes,
-- which can (somehow) cause json to be inserted hex encoded. These updates go
-- and undoes any such hex encoded JSON.

insert into background_updates (update_name, progress_json)
values ('event_fix_redactions_bytes_create_index', '{}');

insert into background_updates (update_name, progress_json, depends_on)
values
	(
		'event_fix_redactions_bytes',
		'{}',
		'event_fix_redactions_bytes_create_index'
	);
